fixed scrollbar distorting the center

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,19 @@
   line-height: inherit;
 }
 
+/* hide scrollbar in chrome/safari */
+::-webkit-scrollbar { 
+  display: none; 
+}
+
+/* hide scrollbar in firefox */
+html {
+  scrollbar-width: none;
+}
+
+body {
+  overflow-x:hidden;
+}
 
 
 /* DARK THEME */
